Searchbar styled, footer styled

--- a/index.html
+++ b/index.html
@@ -21,19 +21,10 @@
         <img  src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo">
     </div>
 
-    <div id="searchbar">
-        <form id="google-search">
-            <div>
-                <input type="search">
-            </div>
-            
-            
-        </form>
-        <div id="search-button">
-            <button form="google-search">Search</button>
-            <button form="google-search">feeling lucky?</button>
-        </div>
-    </div>
+    <form id="searchbar">
+        <img class="search-icon" src="https://michalosman.github.io/google-homepage/images/google-search.png" alt="">
+        <input type="search">
+    </form>
 
     <footer>
         <div class="left-footer">
