Added search buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     <form id="searchbar">
         <img class="search-icon" src="https://michalosman.github.io/google-homepage/images/google-search.png" alt="">
         <input type="search">
+
     </form>
+
+    <div id="search-buttons">
+        <button>Google Search</button>
+        <button>I'm feeling lucky</button>
+    </div>
 
     <footer>
         <div class="left-footer">
